--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -559,3 +559,49 @@
   OPTannote = 	 {}
 }
 
+@article{andersen:keiding,
+  title={Multi-state models for event history analysis},
+  author={Andersen, P. K. and Keiding, N.},
+  journal={Statistical Methods in Medical Research},
+  volume={11},
+  number={2},
+  pages={91--115},
+  year={2002},
+  publisher={SAGE Publications}
+}
+
+@Manual{TH.data,
+  title = {TH.data: TH's Data Archive},
+  author = {Torsten Hothorn},
+  year = {2015},
+  note = {R package version 1.0-6},
+  url = {http://CRAN.R-project.org/package=TH.data},
+}
+
+@Article{francesca:smmr,
+  author = 	 {Ieva, F. and Jackson, C. H. and Sharples, L. D.},
+  title = 	 {Multi-State modelling of repeated hospitalisation and death in patients with Heart Failure: the use of large administrative databases in clinical epidemiology},
+  journal={Statistical Methods in Medical Research},
+  year = 	 {2015},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTpages = 	 {},
+  OPTmonth = 	 {},
+  note =	 {Early view},
+  OPTannote = 	 {}
+}
+
+@Article{survextrap:tatiana,
+  author = 	 {Benaglia, T. and Jackson, C. H. and Sharples, L. D.},
+  title = 	 {Survival Extrapolation in the Presence of Cause Specific Hazards},
+  journal = 	 {Statistics in Medicine},
+  year = 	 {2014},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTpages = 	 {},
+  OPTmonth = 	 {},
+  note =	 {In press.},
+  OPTannote = 	 {}
+}
